Add Jumlah Follower

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="inner">
           <h3 class="masthead-brand">Github Follower</h3>
           <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="https://robyafrizal.netlify.com"
+            <a class="nav-link active" href="https://github.com/robyafrizal"
               >Roby Afrizal Palmendha</a
             >
           </nav>
