Add delete button - finish

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <div class="cover-container d-flex w-1000 h-1000 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
         <div class="inner">
           <h3 class="masthead-brand">Github Follower</h3>
@@ -43,7 +43,7 @@
 
       <center>
         <h1>Project Javascript Fetch Request</h1>
-        <button onclick="getFollowers()" class="bg-dark m-5">
+        <button id="delete" onclick="getFollowers()" class="bg-dark m-5">
           Follower Github
         </button>
       </center>
